# fitness-workout-tracker

./: .gitignore  BACKEND_CLEANUP_SUMMARY.md  LICENSE  MIGRATION_EXERCISE_TYPES.md  README.md  app-foundation.txt  backend-exercises.txt
fastapi_backend/: fix_existing_user.py  migrate_exercises.py  migrate_exercises_auto.py  pyproject.toml  test_auth.py
fastapi_backend/app/: main.py
fastapi_backend/app/auth/: auth_handler.py  dependencies.py
fastapi_backend/app/database/: mongodb.py
fastapi_backend/app/models/: exercise.py  template.py  user.py  workout.py
fastapi_backend/app/routes/: auth.py  exercises.py  templates.py  workouts.py
flutter_app/: pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/models/: exercise.dart  workout.dart  workout_template.dart
flutter_app/lib/providers/: exercise_provider.dart  workout_provider.dart
flutter_app/lib/screens/: create_template_screen.dart  create_workout_screen.dart  exercise_list_screen.dart  login_screen.dart  template_list_screen.dart  workout_detail_screen.dart  workout_list_screen.dart
flutter_app/lib/services/: api_service.dart  auth_exception.dart  auth_service.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/test/: widget_test.dart
flutter_app/windows/runner/: Runner.rc
(+2 files in other folders)
